PLT-4459 	Fixed not being able to scroll on mobile after autocomplete is shown (#4464)
* Fixed not being able to scroll on mobile after autocomplete is shown

* Fixed SuggestionLists not being scrollable on iOS

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -107,14 +107,6 @@
         margin-right: 0 !important;
     }
 
-    #post-list {
-        .post-list-holder-by-time {
-            .modal-open & {
-                @include clearfix;
-            }
-        }
-    }
-
     .post-code__language {
         @include opacity(.6);
         @include transition(none);
